--- a/.github/workflows/config_gene (1).yml
+++ b/.github/workflows/config_gene (1).yml
@@ -10,10 +10,10 @@ on:
         default: 'true'
 
 env:
-  REPO_URL: https://github.com/immortalwrt/immortalwrt
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/bitthief/openwrt
+  REPO_BRANCH: ipq807x-5.15-pr-final
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: .config
+  CONFIG_FILE: AX3600.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
