--- a/.github/workflows/config_gene (1).yml
+++ b/.github/workflows/config_gene (1).yml
@@ -11,7 +11,7 @@ on:
 
 env:
   REPO_URL: https://github.com/bitthief/openwrt
-  REPO_BRANCH: ipq807x-5.15-pr-final
+  REPO_BRANCH: ipq807x-5.15-nss
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: AX3600.config
   DIY_P1_SH: diy-part1.sh
